<resources>
    <string name="app_name">demoFode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Tìm Kiếm</string>
    <string name="thuc_an_ngon">Thức Ăn Ngon</string>
    <string name="giao_hang_nhanh">Giao Hàng Nhanh</string>
    <string name="dau_bep">Đầu Bếp Được Chứng Nhận</string>
    <string name="texttitle">Nấu thức ăn như đầu bếp\nnhân sự của bạn</string>
    <string name="so_thich">You can access our different \ndishes from the menus.</string>
    <string name="get_stated">BẮT ĐẦU</string>
    <string name="login_text">Đăng Nhập</string>
    <string name="singup_btn">Đăng Kí</string>
    <string name="email"> <font size="30">Email</font></string>
    <string name="phone_nunber"><font size="30">Số Điện Thoại</font></string>
    <string name="sing_up_text">Đăng Kí</string>
    <string name="edittext_hint_user"><font size="30">Tài Khoản</font></string>
    <string name="edittext_hint_pass"><font size="30">Mật Khẩu</font></string>
    <string name="no_account"><font size="14">Tôi Không Có Tài Khoản.</font><b><font color="#2F2F2F"> Đăng Kí</font></b></string>
    <string name="have_account"><font size="14">Tôi Có Tài Khoản.</font><b><font color="#2F2F2F"> Đăng Nhập</font></b></string>
    <string name="sign_in_different"><font size="14">Đăng Nhập Bằng Cách Khác.</font></string>
    <string name="login_facebook">Facebook</string>
    <string name="login_goole">Google</string>

    <string name="my_profile">Hồ Sơ Của Tôi</string>
    <string name="chance_pass">Đổi Mật Khẩu</string>
    <string name="payment_setting">Cài Dặt Thanh Toán</string>
    <string name="my_oder">Đơn Hàng Của Tôi</string>
    <string name="food_deli">Giao Đồ Ăn</string>
    <string name="filter_food">Lọc Thực Phẩm</string>
    <string name="log_out">Đăng Xuất</string>

    <string name="name">Nguyễn Trung Chính</string>
    <string name="my_phone">0987654123</string>
    <string name="detail_profile">Chi Tiết Hồ Sơ</string>

    <string name="name_Surname">Họ và Tên\n<b color="#232323">Nguyễn Trung Chính</b> </string>
    <string name="phone_sur">Số Điện Thoại\n<b color="#232323">0987654123</b> </string>
    <string name="email_Sur">Email\n<b color="#232323">danchoi113.tn@gmail.com</b> </string>
    <string name="address_Sur">Địa Chỉ\n<b color="#232323">Bắc Ninh, Việt Nam</b> </string>
    <string name="save">Lưu</string>
    <string name="food">Thức Ăn</string>
    <string name="food_for_you">Đặc Biệt Dành Cho Bạn</string>
    <string name="calories">78 Calor</string>
    <string name="my_address">Địa Chỉ Giao Hàng Của Bạn</string>
    <string name="address_deli">Hà Nội, Việt Nam</string>
    <string name="food_filter">Bộ Lọc Thực Phẩm</string>
    <string name="clasico">Classico</string>
    <string name="mixed">.....</string>
    <string name="clear">Xoá Hết</string>
    <string name="location">Địa Điểm</string>
    <string name="filterBy">Bộ Lọc Theo</string>
    <string name="price">Giá</string>
    <string name="apply">Áp Dụng</string>
    <string name="MyCard">Thẻ \nCủa Bạn</string>
    <string name="totalprice">Tổng Tiền</string>

    <string name="hello_blank_fragment"> hello</string>
</resources>