<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_menu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/food_bg"
        android:backgroundTint="@color/fode_F8D57E">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vector_menu"
        android:layout_marginTop="150dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/text_24_232323"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_phone"
            style="@style/text_14_B0B0B0"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/my_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            style="@style/mainmenulist"
            android:drawableRight="@drawable/next_mainmenu"/>
        <TextView
            android:id="@+id/chance_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/chance_pass"
            android:layout_margin="30dp"
            style="@style/mainmenulist"
            android:drawableRight="@drawable/next_mainmenu"/>
        <TextView
            android:id="@+id/payment_setting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_setting"
            android:layout_marginLeft="30dp"
            style="@style/mainmenulist"
            android:drawableRight="@drawable/next_mainmenu"/>
        <TextView
            android:id="@+id/my_order"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/my_oder"
            android:layout_margin="30dp"
            style="@style/mainmenulist"
            android:drawableRight="@drawable/next_mainmenu"/>
        <TextView
            android:id="@+id/food_deli"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/food_deli"
            style="@style/mainmenulist"
            android:layout_marginLeft="30dp"
            android:drawableRight="@drawable/next_mainmenu" />
        <TextView
            android:id="@+id/filter_food"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_food"
            android:layout_margin="30dp"
            style="@style/mainmenulist"
            android:drawableRight="@drawable/next_mainmenu"/>
        <com.example.demofode.Fode_System_buttom
            android:layout_width="348dp"
            android:layout_height="74dp"
            android:id="@+id/logout"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_out"/>
    </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>