<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_singup">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/food_bg"
        android:backgroundTint="@color/fode_F8D57E">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:background="@drawable/vector_menu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up_text"
            style="@style/text_24_232323"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"/>
        <EditText
            android:id="@+id/user_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fode.edittext"
            android:background="@drawable/vector_textfield"
            android:layout_marginTop="50dp"
            android:hint="@string/edittext_hint_user"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fode.edittext"
            android:background="@drawable/vector_textfield"
            android:layout_marginTop="20dp"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fode.edittext"
            android:background="@drawable/vector_textfield"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_nunber"/>
        <EditText
            android:id="@+id/pass_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fode.edittext"
            android:background="@drawable/vector_textfield"
            android:layout_marginTop="10dp"
            android:hint="@string/edittext_hint_pass"/>
        <com.example.demofode.Fode_System_buttom
            android:id="@+id/btn_singup"
            android:layout_width="348dp"
            android:layout_height="74dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/singup_btn"/>
        <TextView
            android:id="@+id/singup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"/>
    </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/add_avatar"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>