<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/food_bg"
        android:backgroundTint="@color/fode_272727">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="match_parent"
            android:layout_marginTop="121dp"
            android:background="@drawable/vector_menu"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="77dp"
                android:layout_marginRight="125dp"
                style="@style/text_24_232323"
                android:gravity="center"
                android:text="@string/login_text"
                />
            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="custom"
                android:id="@+id/ed_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_user"
                android:layout_gravity="center_horizontal"
                style="@style/fode.edittext">
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edt_text_user"
                    android:background="@drawable/vector_textfield"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_pass"
                android:layout_marginHorizontal="5dp"
                style="@style/fode.edittext"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edt_text_pass"
                    android:background="@drawable/vector_textfield" />
            </com.google.android.material.textfield.TextInputLayout>

           <com.example.demofode.Fode_System_buttom
               android:id="@+id/btn_login"
               android:layout_width="348dp"
               android:layout_height="74dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="25dp"
               android:text="@string/login_text"/>

            <TextView
                android:id="@+id/dki_accout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_14_B0B0B0"
                android:text="@string/no_account"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_14_B0B0B0"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="40dp"
                android:text="@string/sign_in_different"/>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_gravity="center_horizontal">
               <Button
                   android:layout_width="165.5dp"
                   android:layout_height="66.5dp"
                   style="@style/btn_fb"
                   android:text="@string/login_facebook"
                   android:layout_marginRight="10dp"/>
               <Button
                   android:layout_width="165.5dp"
                   android:layout_height="66.5dp"
                   style="@style/btn_gg"
                   android:text="@string/login_goole"/>
           </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_chef"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>